# bagu-cli

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  design.md  plan.md
docs/architecture/: cli-spec.md  data-model.md  http-api-spec.md  modules.md  overview.md  web-ui-overview.md
docs/architecture/adr/: 0001-use-cpp20.md  0002-use-sqlite-with-fts5.md  0003-use-cmake-fetchcontent.md  0004-add-http-server-mode.md  0005-choose-cpp-httplib.md  0006-frontend-stack-vite-react.md  README.md  template.md
docs/development/: coding-standards.md  debugging.md  git-workflow.md  setup.md
docs/operations/: build.md  ci-cd.md  error-handling.md  logging.md  release.md  runbook.md
docs/planning/: definition-of-done.md  milestones.md  risks.md  roadmap.md  web-ui-roadmap.md
docs/product/: PRD-web-ui.md  PRD.md  personas.md
docs/quality/: performance-budget.md  security-checklist.md
docs/reference/: glossary.md
docs/testing/: benchmarks.md  strategy.md
docs/user-guide/: README.md  config.md  export.md  faq.md  getting-started.md  llm-providers.md  markdown-format.md  remind.md  web-ui.md
include/bagu/: error.h  result.h  version.h
scripts/: gen_embedded_assets.cmake
scripts/homebrew/: bagu-cli.rb
src/: CMakeLists.txt  main.cpp
src/cli/: config_cmd.cpp  config_cmd.h  due_cmd.cpp  due_cmd.h  export_cmd.cpp  export_cmd.h  import_cmd.cpp  import_cmd.h  init_cmd.cpp  init_cmd.h  interview_cmd.cpp  interview_cmd.h  list_cmd.cpp  list_cmd.h  pause_cmd.cpp  pause_cmd.h  remind_cmd.cpp  remind_cmd.h  review_cmd.cpp  review_cmd.h  search_cmd.cpp  search_cmd.h  serve_cmd.cpp  serve_cmd.h  show_cmd.cpp  show_cmd.h  stats_cmd.cpp  stats_cmd.h
src/core/: sm2.cpp  sm2.h
src/db/: card_dao.cpp  card_dao.h  chapter_dao.cpp  chapter_dao.h  database.cpp  database.h  interview_dao.cpp  interview_dao.h  migrations.cpp  migrations.h  models.h  review_dao.cpp  review_dao.h  statement.cpp  statement.h  topic_dao.cpp  topic_dao.h
src/http/: embedded_assets.h  http_server.cpp  http_server.h  interview_routes.cpp  interview_routes.h  json_io.h
src/llm/: config_loader.cpp  config_loader.h  factory.cpp  llm_client.h  mock_client.h  openai_client.cpp  openai_client.h  prompts.cpp  prompts.h
src/parser/: markdown_parser.cpp  markdown_parser.h
src/service/: export_service.cpp  export_service.h  import_service.cpp  import_service.h  interview_service.cpp  interview_service.h  review_service.cpp  review_service.h  stats_service.cpp  stats_service.h
src/tui/: review_screen.cpp  review_screen.h
src/util/: hash.cpp  hash.h  http.cpp  http.h  network.cpp  network.h  notify.cpp  notify.h  path.cpp  path.h
tests/: CMakeLists.txt
tests/unit/: result_test.cpp
tests/unit/core/: sm2_test.cpp
tests/unit/db/: card_dao_test.cpp  database_test.cpp  interview_dao_test.cpp  migrations_test.cpp  statement_test.cpp  topic_dao_test.cpp
tests/unit/http/: http_server_test.cpp  interview_routes_test.cpp
tests/unit/llm/: config_loader_test.cpp  mock_client_test.cpp  openai_protocol_test.cpp
tests/unit/parser/: markdown_parser_test.cpp
tests/unit/service/: export_service_test.cpp  import_service_test.cpp  interview_service_test.cpp  review_service_test.cpp  stats_service_test.cpp
tests/unit/util/: path_test.cpp
web/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
web/e2e/: README.md  api-smoke.spec.ts  fixtures.ts  home.spec.ts  interview-history.spec.ts  navigation.spec.ts  stats.spec.ts  theme.spec.ts
web/public/: manifest.webmanifest  sw.js
web/src/: App.tsx  index.css  main.tsx  pwa.ts
web/src/api/: client.ts  types.ts
web/src/components/: AppLayout.tsx  Heatmap.tsx  MarkdownRenderer.tsx  ScoreButtons.tsx  ThemeToggle.tsx
web/src/hooks/: useApi.ts  useTheme.ts
web/src/pages/: CardPage.tsx  HomePage.tsx  InterviewHistoryPage.tsx  InterviewPage.tsx  InterviewSessionPage.tsx  PlaceholderPage.tsx  ReviewPage.tsx  SearchPage.tsx  StatsPage.tsx  TopicPage.tsx
